tests/fixtures/invalid/none_notin_str.py
# Cannot use 'not in' with None and Str
x: bool = None not in "hello"
